--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -531,7 +531,7 @@
         <div class="container header-container">
             <a href="#" class="logo">
                 <!-- IMPORTANT: Update this path based on your logo location -->
-                <img src="/cobank-logo.svg" alt="CoBank Logo">
+                <img src="/assets/cobank-logo.svg" alt="CoBank Logo">
             </a>
             
             <button class="mobile-menu-btn" id="mobileMenuBtn">
